EFA Version 3.0.0.3 Changes

03/02/14
Issue #30 Filter non-spam from quarantine reports

Issue #56 Add yum update exclusions

02/24/14
Issue #55 Bug
Kernel Update from yum update breaks vmware-tools (open-vm-tools)

Issue #48 and #47
MailWatch update to include lists.php typo and Release All bugs

02/20/14
Issue #53 Bug
Fix postfix queue directories after yum update

02/06/14
Issue #17 Enhancement
Trusted Networks Support for learn-msg.cgi

02/02/14
Issue #16 Enhancement
Automated Backup of MySQL and Settings

02/01/14
Issue #12 Enhancement
Improved handling of transport file with EFA-Configure

EFA Version 3.0.0.2 changes

02/03/14
Issue #44
Urgent: learn-msg.cgi broken
Insert EFA database password back into script

No other changes for 3.0.0.2.  Build from scratch is not affected by this bug and can remain on 3.0.0.1 at this time.

EFA Version 3.0.0.1 Changes

01/29/14
Issue 41
Correct length check for ID in learn-msg.cgi

01/28/14
Issue 24 
Disabled cleaned message delivery
Add option to configure cleaned message delivery

01/27/14
Issue 23
Remove cyrus-sasl-ldap and cyrus-sasl-sql packages
To suppress sql_select option missing and
auxpropfunc error no mechanism available

Issue 32
Enable quarantine cleanup

01/25/14
Issue 25
Add https/ssl/tls configuration options for Apache